--- a/Redux/package.json
+++ b/Redux/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "immer": "^10.0.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6"
   }
 }
